# Argus

./: .gitignore  phishingDP移植.md  plan.md
backend/: .env-example  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: app_factory.py  config.py  container.py  database.py
backend/app/crud/: email_account_crud.py  email_crud.py  email_sync_crud.py  sender_whitelist_crud.py  system_settings_crud.py  url_whitelist_crud.py  user_crud.py
backend/app/entities/: email_account_entity.py  email_entity.py  sender_whitelist_entity.py  system_settings_entity.py  url_whitelist_entity.py  user_entity.py
backend/app/routers/: admin_router.py  auth_router.py  email_account_router.py  email_router.py  phishing_router.py
backend/app/schemas/: admin_schema.py  auth_schema.py  email_schema.py  phishing_schema.py
backend/app/services/: admin_service.py  auth_service.py  email_account_service.py  email_service.py  phishing_detection_service.py  sender_whitelist_service.py  system_settings_service.py  url_whitelist_service.py
backend/app/utils/: environment.py  token_generator.py  validators.py
backend/app/utils/imap/: __init__.py  imap_client.py  smtp_client.py
backend/app/utils/logging/: log_configurator.py
backend/app/utils/phishing/: __init__.py  composite_detector.py  dynamic_detector.py  feature_extractor.py  ml_phishing_detector.py  ml_trainer.py  mock_phishing_detector.py  phishing_detector_interface.py  score_level_mapper.py  (+1 more)
backend/scripts/: init_database.py  init_db.py
backend/tests/: test_email_sync.py
(+31 files in other folders)
