[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.0",
    "aiomysql>=0.2.0",
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
    "aiosmtplib>=3.0.0",
    "aioimaplib>=1.1.0",
]
